styles/projectView/projectMain.css
.projectView {
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  top: 0;
  left: 10vw;
  transform: translateY(-105%);
  height: 90vh;
  width: 80vw;
  border: #111 solid 1px;
  border-radius: 0.5em;
  background-color: #fff;
  box-shadow: 
    0.25em 0.25em 0em rgb(221, 221, 221),
    0 -3.5em 0em rgba(255,255,255,0.4);
  transition: transform 0.5s ease;
  z-index: 10;
}

@media (max-width: 1200px) {
  .projectView {
    width: 95vw;
    left: 2.5vw;
  }
}

.projectView.active {
  transform: translateY(5%);
}

.projectView.active ~ #homeView #homeViewTitle {
  color: pink;
}


.projectView .bottomPanel {
  position: relative;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: center;
  gap: 1em;
  width: 100%;
  flex-grow: 1; /* growing vertically */
  overflow: hidden;
  padding: 0 1em 1em 1em;
}

.projectView .bottomPanelLeft {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  width: 50%;
  height: 100%;
  overflow: hidden;
}

.projectView .bottomPanelRight {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 50%;
  gap: 0.5em;
  height: 100%;
}

.minimizeProjectBtn {
  position: absolute;
  right: 1em;
  top: -2em;
  height: 2em;
  width: fit-content;
  margin: 0;
  border: 1px solid #111;
  background-color: #333;
  border-top-left-radius: 0.75em;
  border-top-right-radius: 0.75em;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  z-index: 0;
  transition: 
    border-bottom-left-radius 0.3s,
    border-bottom-right-radius 0.3s,
    transform 0.3s, 
    background-color 0.3s
  ;
}

.minimizeProjectBtn i {
  color: #eee;
  font-size: 1.25em;
  padding: 0 0.5em;
}

.minimizeProjectBtn:hover {
  cursor: pointer; 
  background-color: #fff;
  border-bottom-left-radius: 0.75em;
  border-bottom-right-radius: 0.75em;
  transform: translateY(-0.1em);
}

.minimizeProjectBtn:hover  i {
  color: #111;
}

